syntax = "proto3";

package api.gvs_mgr;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "austin-v2/api/mgr";

service GmpPlatform {
  //新增/修改账号
  rpc SendAccountEdit(SendAccountEditRequest) returns(google.protobuf.Empty){
    option (google.api.http) = {
      post : "/gmp_platform/sendAccount/edit"
      body : "*"
    };
  };
  //禁用/启用
  rpc SendAccountChangeStatus(SendAccountChangeStatusRequest) returns(google.protobuf.Empty){
    option (google.api.http) = {
      post : "/gmp_platform/sendAccount/changeStatus"
      body : "*"
    };
  };
  //账号列表
  rpc SendAccountList(SendAccountListRequest) returns(SendAccountListResp){
    option (google.api.http) = {
      get : "/gmp_platform/sendAccount/list"
    };
  };
  //账号获取下拉
  rpc SendAccountQuery(SendAccountListRequest) returns(SendAccountQueryResp){
    option (google.api.http) = {
      get : "/gmp_platform/sendAccount/query"
    };
  };

  //新增/修改模板
  rpc TemplateEdit(TemplateEditRequest) returns(google.protobuf.Empty){
    option (google.api.http) = {
      post : "/gmp_platform/template/edit"
      body : "*"
    };
  };
  //禁用/启用
  rpc TemplateChangeStatus(TemplateChangeStatusRequest) returns(google.protobuf.Empty){
    option (google.api.http) = {
      post : "/gmp_platform/template/changeStatus"
      body : "*"
    };
  };
  //模板列表
  rpc TemplateList(TemplateListRequest) returns(TemplateListResp){
    option (google.api.http) = {
      get : "/gmp_platform/template/list"
    };
  };
  //删除模板
  rpc TemplateRemove(TemplateRemoveRequest) returns(google.protobuf.Empty){
    option (google.api.http) = {
      post : "/gmp_platform/template/remove"
      body : "*"
    };
  };
  //删除模板
  rpc TemplateOne(TemplateOneRequest) returns(TemplateOneResp){
    option (google.api.http) = {
      get : "/gmp_platform/template/one"
    };
  };
  //获取所有支持的渠道
  rpc GetAllChannel(google.protobuf.Empty) returns(GetAllChannelResp){
    option (google.api.http) = {
      get : "/gmp_platform/sms/getAllChannel"
    };
  };


  //短信记录列表
  rpc GetSmsRecord(SmsRecordRequest) returns(SmsRecordResp){
    option (google.api.http) = {
      get : "/gmp_platform/sms/record"
    };
  };
  //消息记录列表
  rpc GetMsgRecord(MsgRecordRequest) returns(MsgRecordResp){
    option (google.api.http) = {
      get : "/gmp_platform/msg/record"
    };
  };
  //获取微信小程序下拉模板
  rpc GetOfficialAccountTemplateList(OfficialAccountTemplateRequest) returns(OfficialAccountTemplateResp){
    option (google.api.http) = {
      get : "/gmp_platform/wxTemplate/getOfficialAccountTemplateList"
    };
  };
}

message SendAccountEditRequest {
  int32 id = 1;
  string title = 2;
  string config = 3;
  string send_channel = 4;
}

message SendAccountListRequest {
  string title = 1;
  string send_channel = 2;
  int64 pageNo = 4;
  int64 pageSize = 5;
}

message SendAccountChangeStatusRequest {
  int32 id = 1;
  int32 status = 2;
}

message SendAccountRow {
  int32 id = 1;
  string title = 2;
  string config = 3;
  string send_channel = 4;
  int32 status = 5;
}

message SendAccountListResp {
  repeated SendAccountRow items = 1;
  int32 total = 2;
}

message SendAccountQueryResp {
  repeated SendAccountRow items = 1;
}
message TemplateEditRequest {
  int64 id = 1;
  string name = 2;
  int32 id_type = 3;
  int32 send_channel = 4;
  int32 template_type = 5;
  int32 msg_type = 6;
  int32 shield_type = 7;
  string msg_content = 8;
  int32 send_account = 9;
  string template_sn = 10;
  string sms_channel = 11;
  string deduplication_config = 12;
}

message TemplateChangeStatusRequest {
  int64 id = 1;
  int32 status = 2;
}

message TemplateListRequest {
  string name = 1;
  string send_channel = 2;
  int64 pageNo = 3;
  int64 pageSize = 4;
}

message TemplateListRow {
  int64 id = 1;
  string name = 2;
  int32 id_type = 3;
  int32 send_channel = 4;
  int32 template_type = 5;
  int32 msg_type = 6;
  int32 shield_type = 7;
  string msg_content = 8;
  int32 send_account = 9;
  string send_account_name = 10;
  string template_sn = 11;
  string sms_channel = 12;
  string create_at = 13;
  string deduplication_config = 14;
}

message TemplateListResp {
  repeated TemplateListRow items = 1;
  int32 total = 2;
}

message TemplateRemoveRequest{
  int64 id = 1;
}

message Channel{
  int32 id = 1;
  string name = 2;
  string channel = 3;
}

message GetAllChannelResp{
  repeated Channel items = 1;
}
message SmsRecordRequest{
  string template_id = 1;
  string request_id = 2;
  string send_channel = 3;
  int64 pageNo = 4;
  int64 pageSize = 5;
}

message SmsRecordRow{
  int64 id = 1;
  string series_id = 2;
  string msg_content = 3;
  string supplier_name = 4;
  int64 supplier_id = 5;
  string phone = 6;
  int64 message_template_id = 7;
  string created_at = 8;
  string send_date = 9;
  string status = 10;
  string report_content = 11;
  int64 charging_num = 12;
  string updated_at = 13;
}

message SmsRecordResp{
  repeated SmsRecordRow items = 1;
  int32 total = 2;
}
message MsgRecordRequest{
  string template_id = 1;
  string request_id = 2;
  string channel = 3;
  int64 pageNo = 4;
  int64 pageSize = 5;
}

message MsgRecordRow{
  int64 message_template_id = 1;
  string request_id = 2;
  string receiver = 3;
  string msg_id = 4;
  string channel = 5;
  string msg = 6;
  string send_at = 7;
  string create_at = 8;
  string send_since_time = 9;
  int64 id = 10;
}

message MsgRecordResp{
  repeated MsgRecordRow items = 1;
  int32 total = 2;
}

message OfficialAccountTemplateRequest{
  string send_account = 1;
}

message OfficialAccountTemplateResp{
  repeated OfficialAccountTemplateRow items = 1;
}

message OfficialAccountTemplateRow{
  string template_id = 1;
  string title = 2;
  string content = 3;
  string example = 4;
}

message TemplateOneRequest{
  int64 id = 1;
}

message TemplateOneResp{
  int64  id = 1;
  string name = 2;
  int32 id_type = 4;
  int32 send_channel = 5;
  int32 template_type = 6;
  string template_sn = 7;
  int32 msg_type = 8;
  int32 shield_type = 9;
  string msg_content = 10;
  int32  send_account = 11;
  string create_by = 12;
  string update_by = 13;
  string sms_channel = 14;
  string deduplication_config = 15;
}
