syntax = "proto3";

package api.msgpusher;
import "google/protobuf/struct.proto";
import "google/api/annotations.proto";

option go_package = "austin-v2/api/msgpusher/v1;v1";
option java_multiple_files = true;
option java_package = "api.msgpusher";

message SendRequest {
  string code = 1;
  int64 messageTemplateId = 2;
  MessageParam messageParam = 3;
}

message BatchSendRequest {
  string code = 1;
  int64 messageTemplateId = 2;
  repeated MessageParam messageParam = 3;
}

message MessageParam {
  string receiver = 1;
  google.protobuf.Struct variables = 2;
  google.protobuf.Struct extra = 3;
}

message SendResponse {
  string code = 1;
}

service MsgPusher {
  rpc Send(SendRequest) returns(SendResponse){
    option (google.api.http) = {
      post : "/msgpusher/v1/send",
      body : "*"
    };
  };
  rpc BatchSend(BatchSendRequest) returns(SendResponse){
    option (google.api.http) = {
      post : "/msgpusher/v1/batch_send",
      body : "*"
    };
  };
}